2005-03-30  Albert Chu  <chu11@llnl.gov>

	* Minor code cleanup throughout

	* src/cerebrod/cerebrod_updown.c (cerebrod_updown_update_data):
	Fix race condition.

	* configure.ac, src/libcerebro/Makefile.am: Add library
	versioning.

	* src/libcerebro/cerebro.map: New file.

	* src/libcerebro/Makefile.am: Add symbol export map.
	
2005-03-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c
	(cerebrod_err_init, cerebrod_err_get_flags,
	cerebrod_err_set_flags, cerebrod_err_output, cerebrod_err_exit):
	New functions.

	* src/cerebrod/: Globally use new err functions appropriately and
	various code cleanup.
	
2005-03-29  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c (cerebrod_config_cleanup): Fix
	static modules bug.

	* src/cerebrod/cerebrod_config.c (_cerebrod_config_parse): Minor
	debugging fix.
	
	* src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_send_node_responses): New function.
	
	* src/libcerebro/cerebro_updown_protocol.h,
	src/cerebrod/cerebrod_updown.c
	(_cerebrod_updown_request_marshall,
	_cerebrod_updown_evaluate_updown_state,
	_cerebrod_updown_respond_with_updown_nodes): Continued work to
	complete updown server functionality.

	* src/cerebrod/cerebrod_error.h, src/cerebrod/cerebrod_error.c:
	New files.

	* src/cerebrod/: Globally use cerebrod_err_debug instead of
	err_debug when appropriate.

	* src/libcommon/Makefile.am, src/cerebrod/Makefile.am: Split off
	libcommon libraries into libcommon and libwrappers.

	* src/cerebrod/cerebrod.c (main): Fix spinning loop issue.

	* src/libcerebro/cerebro_updown_protocol.h: Define default server port.

	* src/cerebrod/cerebrod_config.h: Use defined default server port.

	* src/cerebrod/cerebrod_speaker.c (_cerebrod_speaker_initialize):
	Improve initialization routine.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c: Add function
	name output to wrappers.
	
2005-03-28  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_updown.c