@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_defs.h,v 1.1 2005-03-25 19:44:05 achu Exp $
+ *  $Id: cerebro_defs.h,v 1.2 2005-03-30 18:46:58 achu Exp $
 \*****************************************************************************/
  
 #ifndef _CEREBRO_DEFS_H
@@ -7,8 +7,9 @@
 
 /* Do not use MAXHOSTNAMELEN defined (typically) in sys/param.h.  We
  * do not want the possibility that other machines may have a
- * different length definition for MAXHOSTNAMELEN.
+ * different length definition for MAXHOSTNAMELEN.  We define our own
+ * maximum nodename length.
  */
-#define CEREBRO_MAXHOSTNAMELEN 64
+#define CEREBRO_MAXNODENAMELEN 64
 
 #endif /* _CEREBRO_DEFS_H */
